--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
+    "motion": "^12.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
