--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,9 +14,11 @@
     "@headlessui/react": "^2.2.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "motion": "^12.17.0",
     "react": "^18.2.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
