--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@popperjs/core": "^2.11.8",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
