--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
+    "lucide": "^0.522.0",
+    "lucide-react": "^0.522.0",
     "motion": "^12.17.0",
     "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
