--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "date-holidays": "^3.24.4",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.522.0",
     "lucide-react": "^0.522.0",
